--- a/Modulo 1/Pratica Modulo 1/Trabalho Prático/index.html
+++ b/Modulo 1/Pratica Modulo 1/Trabalho Prático/index.html
@@ -4,8 +4,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
-    integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+  <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+    integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous"> -->
+
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
   <link rel="stylesheet" href="./css/style.css">
   <script src="./js/script.js"></script>
@@ -17,26 +20,34 @@
 
     <h1>Números por Extenso</h1>
     <!-- div com o input range para verificar os numeros -->
-    <div class="input-group">
+    <div class="input-field">
       <div class="col-md-3"></div>
       <div class="col-md-6">
-        <label for="rangeControl">Escolha um numero entre 0 e 999</label>
-        <input type="range" class="form-control-range" id="rangeControl" min="0" max="999" step="1" value="0">
+        <p>
+          <span>Escolha um numero entre 0 e 999</span>
+        </p>
+        <p class="range-field">
+          <input type="range" id="rangeControl" min="0" max="999" step="1" value="0">
+        </p>
       </div>
       <div class="col-md-3"></div>
     </div>
 
     <!-- div com o input de numeros -->
-    <div class="input-group" id="paddingDiv">
-      <div class="col-md-3"></div>
+    <div class="input-field" id="paddingDiv">
+      <div class="col-md-3">
+      </div>
       <div class="col-md-6">
-        <input type="text" class="form-control" placeholder="Numero inteiro" id="numberInt" disabled>
+        <div class="right-inner-addon">
+          <i class="fa fa-list-ol"></i>
+          <input type="text" class="form-control" placeholder="Numero inteiro" id="numberInt" disabled>
+        </div>
       </div>
       <div class="col-md-3"></div>
     </div>
 
     <!-- div com o input de numeros por extenso -->
-    <div class="input-group" id="paddingDiv">
+    <div class="input-field" id="paddingDiv">
       <div class="col-md-3"></div>
       <div class="col-md-6">
         <input type="text" class="form-control" placeholder="Numero por extenso" id="numberText" disabled>
@@ -45,6 +56,8 @@
     </div>
 
   </div>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 </body>
 
 </html>
