Ajustes trabalho numero por extenso

--- a/Modulo 1/Pratica Modulo 1/Trabalho Prático/index.html
+++ b/Modulo 1/Pratica Modulo 1/Trabalho Prático/index.html
@@ -40,7 +40,7 @@
       <div class="col-md-6">
         <div class="right-inner-addon">
           <i class="fa fa-list-ol"></i>
-          <input type="text" class="form-control" placeholder="Numero inteiro" id="numberInt" disabled>
+          <input type="text" class="form-control" placeholder="Numero inteiro" id="numberInt" disabled style="text-transform: uppercase;">
         </div>
       </div>
       <div class="col-md-3"></div>
@@ -50,7 +50,7 @@
     <div class="input-field" id="paddingDiv">
       <div class="col-md-3"></div>
       <div class="col-md-6">
-        <input type="text" class="form-control" placeholder="Numero por extenso" id="numberText" disabled>
+        <input type="text" class="form-control" placeholder="Numero por extenso" id="numberText" disabled style="text-transform: uppercase;">
       </div>
       <div class="col-md-3"></div>
     </div>
